2013-04-30  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* eu-config.h (COMPAT_VERSION_NEWPROTO): New.  Twice.

2013-04-26  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* system.h (LE64, BE64): Move here the definitions from
	libdwfl/link_map.c.

2013-04-24  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am: Use AM_CPPFLAGS instead of INCLUDES.

2012-10-09  Adam Markey  <adam@etinternational.com>

	* system.h: Changed pwrite_retry, write_retry, and pread_retry to
	handle case where not all data was read/written.

2012-10-08  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* system.h (eu_static_assert): New macro.

2012-01-21  Ulrich Drepper  <drepper@gmail.com>

	* Makefile.am (libeu_a_SOURCES): Add color.c.
	* system.h: Declare color_argp.  Define color_enum.  Declare
	color_* variables.
	* color.c: New file.

2011-10-02  Ulrich Drepper  <drepper@gmail.com>

	* system.h: Declare __cxa_demangle.

2011-07-09  Roland McGrath  <roland@hack.frob.com>

	* sha1.c (be64_copy): New function.
	(sha1_finish_ctx): Use it.
	* md5.c (le64_copy): New function.
	(md5_finish_ctx): Use it.
	* system.h (LE32, BE32): New macros, using <endian.h> and <byteswap.h>.
	* md5.c (SWAP): Use LE32.
	* sha1.c (SWAP): Use BE32.

2010-06-16  Roland McGrath  <roland@redhat.com>

	* dynamicsizehash.h (HASHTYPE): New macro.
	(struct): Use size_t for table sizes.
	* dynamicsizehash.c: Likewise.  Use HASHTYPE for hash values.

2010-02-15  Roland McGrath  <roland@redhat.com>

	* Makefile.am: Use config/eu.am for common stuff.

2009-08-09  Roland McGrath  <roland@redhat.com>

	* eu-config.h (OLD_VERSION, NEW_VERSION, COMPAT_VERSION): New macros.

2009-01-23  Roland McGrath  <roland@redhat.com>

	* eu-config.h: Add multiple inclusion protection.

2009-01-17  Ulrich Drepper  <drepper@redhat.com>

	* system.h (ARGP_PROGRAM_VERSION_HOOK_DEF): Define.
	(ARGP_PROGRAM_BUG_ADDRESS_DEF): Define.

2009-01-10  Ulrich Drepper  <drepper@redhat.com>
